--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Edutech<contato@edutechblocks.com.br>
 sentence=This is a library for use with platform Edutech Blocks
 paragraph=This is a library for use with platform Edutech Blocks
 category=Serial
-url=https://github.com/EdutechBlocks/EDUTECH-tone.git
+url=https://github.com/EdutechBlocks/SerialCommand
 architectures=*
